--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@
     width: 55vw;
     max-width: 500px;
     max-height: 500px;
+    animation-name: wheel;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
 
 .line {
@@ -53,11 +57,6 @@
     top: 50%;
 }
 
-.cabin:nth-of-type(6) {
-    right: 17%;
-    top: 7%;
-}
-
 .cabin:nth-of-type(2) {
     right: 17%;
     top: 93.5%;
@@ -76,4 +75,19 @@
 .cabin:nth-of-type(5) {
     left: 17%;
     top: 7%;
+}
+
+.cabin:nth-of-type(6) {
+    right: 17%;
+    top: 7%;
+}
+
+@keyframes wheel {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
